[project]
name = "ml-regression"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "catboost>=1.2.8",
    "category-encoders>=2.9.0",
    "imbalanced-learn>=0.14.1",
    "ipykernel>=7.1.0",
    "lightgbm>=4.6.0",
    "nbformat>=5.10.4",
    "optuna>=4.7.0",
    "pandas>=3.0.0",
    "phik>=0.12.5",
    "plotly>=6.5.2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "shap>=0.49.1",
]
